--- a/SabeNaoSabe.Maui/Components/Pages/QuestionarioPage.razor
+++ b/SabeNaoSabe.Maui/Components/Pages/QuestionarioPage.razor
@@ -5,7 +5,7 @@
 @using SabeNaoSabe.RazorClassLibrary.Data
 @using SabeNaoSabe.RazorClassLibrary.ViewModel
 
-<h3>QuestionarioPage</h3>
+<h3>Questionario</h3>
 
 <QuestionarioComponent></QuestionarioComponent>
 
