depois do maremoto

--- a/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioComponent.razor
+++ b/SabeNaoSabe.RazorClassLibrary/Component/QuestionarioComponent.razor
@@ -1,25 +1,24 @@
-﻿@using SabeNaoSabe.RazorClassLibrary.Services
-@using SabeNaoSabe.RazorClassLibrary.Data
-@using SabeNaoSabe.RazorClassLibrary.Component
-@using SabeNaoSabe.RazorClassLibrary.ViewModel
+﻿@using SabeNaoSabe.RazorClassLibrary.Component
+@using SabeNaoSabe.RazorClassLibrary.Models
+@using SabeNaoSabe.RazorClassLibrary.Services
 
 <AddButton Visible="@showAddButton" CreateUpdateQuestionarioClicked="QuestionarioCreateUpdate" ></AddButton>
 
-<QuestionarioTable  Visible="@showQuestionarioTable" 
+@* <QuestionarioTable  Visible="@showQuestionarioTable" 
                     qList="questionariosList"
                     DetailsClicked="DetailsQuestionario"
                     EditClicked="EditQuestionario"
                     DeleteClicked="DeleteQuestionario" />
-
-<QuestionarioCreateUpdate Visible="@showQuestionarioCreateUpdate" QuestionarioModel="@QuestionarioModel" 
+ *@
+@* <QuestionarioCreateUpdate Visible="@showQuestionarioCreateUpdate" QuestionarioModel="@QuestionarioModel" 
     SaveClicked="SavedClicked" CancelClicked="CanceledClicked" title="@strTitle"/>
 
 <Confirm Visible="@showConfirm" DeleteQuestionarioClicked="DeleteQuestionarioConfirm" CancelQuestionarioClicked="CancelQuestionarioConfirm"/>
 
 <QuestionarioDetails BackClicked="CanceledClicked" QuestionarioModel="@QuestionarioModel" Title="@strTitle" Visible="@showQuestionarioDetails" />
-
+ *@
 @code {
-
+    private IQuestionarioService questionarioService = new QuestionarioService();
 
     private bool showAddButton = true;
     private bool showQuestionarioTable = true;
@@ -33,10 +32,7 @@
     private List<Questionario> questionariosList = new List<Questionario>();
 
 
-    private QuestionarioViewModel QuestionarioModel = new QuestionarioViewModel();
-
-    private QuestionarioService questionarioService = new QuestionarioService();
-
+    private Questionario QuestionarioModel = new Questionario();
 
     protected override void OnInitialized()
     {
@@ -44,7 +40,9 @@
     }
     private async void LoadQuestionario()
     {
-        questionariosList = await questionarioService.GetAllAsync();
+        questionariosList = await questionarioService.GetQuestionarios();
+
+        int i = 0;
     }
 
     private void QuestionarioCreateUpdate()
@@ -55,69 +53,69 @@
         showQuestionarioCreateUpdate = true;
         showQuestionarioDetails = false;
     }
-    private async void SavedClicked()
-    {
+    // private async void SavedClicked()
+    // {
 
-        if(QuestionarioModel.Id > 0)
-        {
-            await questionarioService.EditQuestionario(QuestionarioModel);
-        }
-        else
-        {
-            await questionarioService.AddQuestionario(QuestionarioModel);
-        }
+    //     if(QuestionarioModel.Id > 0)
+    //     {
+    //         await questionarioService.EditQuestionario(QuestionarioModel);
+    //     }
+    //     else
+    //     {
+    //         await questionarioService.AddQuestionario(QuestionarioModel);
+    //     }
 
-        showAddButton = true;
-        showQuestionarioTable = true;
-        showQuestionarioCreateUpdate = false;
-    }
-    private async void CanceledClicked()
-    {
-        showAddButton = true;
-        showQuestionarioTable = true;
-        showQuestionarioCreateUpdate = false;
-        showQuestionarioDetails = false;
+    //     showAddButton = true;
+    //     showQuestionarioTable = true;
+    //     showQuestionarioCreateUpdate = false;
+    // }
+    // private async void CanceledClicked()
+    // {
+    //     showAddButton = true;
+    //     showQuestionarioTable = true;
+    //     showQuestionarioCreateUpdate = false;
+    //     showQuestionarioDetails = false;
 
-    }
-    private async void DetailsQuestionario(int id)
-    {
-        strTitle = "Details";
-        var quest = await questionarioService.GetByIdAsync(id);
-        showAddButton = false;
-        showQuestionarioTable = false;
-        showQuestionarioCreateUpdate = false;
-        QuestionarioModel.Description = quest.Description;
-        QuestionarioModel.Name = quest.Name;
-        QuestionarioModel.Id = quest.Id;
-        showQuestionarioDetails = true;
+    // }
+    // private async void DetailsQuestionario(int id)
+    // {
+    //     strTitle = "Details";
+    //     var quest = await questionarioService.GetByIdAsync(id);
+    //     showAddButton = false;
+    //     showQuestionarioTable = false;
+    //     showQuestionarioCreateUpdate = false;
+    //     QuestionarioModel.Description = quest.Description;
+    //     QuestionarioModel.Name = quest.Name;
+    //     QuestionarioModel.Id = quest.Id;
+    //     showQuestionarioDetails = true;
 
-    }
-    private async void EditQuestionario(int id)
-    {
-        strTitle = "Edit";
-        var quest = await questionarioService.GetByIdAsync(id);
-        showAddButton = false;
-        showQuestionarioTable = false;
-        showQuestionarioCreateUpdate = true;
-        QuestionarioModel.Description = quest.Description;
-        QuestionarioModel.Name = quest.Name;
-        QuestionarioModel.Id = quest.Id;
-    }
-    private async void DeleteQuestionario(int id)
-    {
-        showConfirm = true;
-        Id = id;
-        // showAddButton = false;
-        // showQuestionarioTable = false;
-        // showQuestionarioCreateUpdate = true;
-    }
-    private async void DeleteQuestionarioConfirm()
-    {
-        showConfirm = false;
-        await questionarioService.DeleteQuestionario(Id);
-    }
-    private async void CancelQuestionarioConfirm()
-    {
-        showConfirm = false;
-    }
+    // }
+    // private async void EditQuestionario(int id)
+    // {
+    //     strTitle = "Edit";
+    //     var quest = await questionarioService.GetByIdAsync(id);
+    //     showAddButton = false;
+    //     showQuestionarioTable = false;
+    //     showQuestionarioCreateUpdate = true;
+    //     QuestionarioModel.Description = quest.Description;
+    //     QuestionarioModel.Name = quest.Name;
+    //     QuestionarioModel.Id = quest.Id;
+    // }
+    // private async void DeleteQuestionario(int id)
+    // {
+    //     showConfirm = true;
+    //     Id = id;
+    //     // showAddButton = false;
+    //     // showQuestionarioTable = false;
+    //     // showQuestionarioCreateUpdate = true;
+    // }
+    // private async void DeleteQuestionarioConfirm()
+    // {
+    //     showConfirm = false;
+    //     await questionarioService.DeleteQuestionario(Id);
+    // }
+    // private async void CancelQuestionarioConfirm()
+    // {
+    //     showConfirm = false;
+    // }
 }
