--- a/SabeNaoSabe.WASM/Pages/Index.razor
+++ b/SabeNaoSabe.WASM/Pages/Index.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 @using SabeNaoSabe.RazorClassLibrary.Component
-@using SabeNaoSabe.RazorClassLibrary.Services
-@using SabeNaoSabe.RazorClassLibrary.Data
 
 <h3>Questionario</h3>
 
@@ -9,4 +7,5 @@
 
 
 @code {
+    public int i = 0;
 }
